# orbit

./: .env.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  ENGINE_REFACTOR_PROGRESS.md  PLAN.md  README.md  adversarial-test-prompt.md  ascii-house.txt  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
crates/orbit-engine/: Cargo.toml  build.rs
crates/orbit-engine/src/: app_context.rs  error.rs  lib.rs  memory_service.rs  runtime_host.rs  sqlite_compat.rs
crates/orbit-engine/src/commands/: agents.rs  auth.rs  bus.rs  chat.rs  global_settings.rs  llm.rs  memory.rs  mod.rs  permissions.rs  plugins.rs  project_board_columns.rs  project_boards.rs  project_workflows.rs  projects.rs  pulse.rs  runs.rs  schedules.rs  skills.rs  tasks.rs  terminals.rs  triggers.rs  users.rs  work_item_events.rs  work_items.rs  workflow_runs.rs  workspace.rs
crates/orbit-engine/src/db/: cloud.rs  connection.rs  mod.rs  postgres.rs
crates/orbit-engine/src/db/migrations/: 0003_chat_sessions.sql  0007_sub_agents.sql  0009_drop_sessions.sql  0010_users.sql  0013_compaction_improvements.sql  0017_agent_tasks.sql  0020_project_workflows.sql  0021_workflow_runs.sql  0022_workflow_sources_and_board_columns.sql  0025_channel_sessions.sql  0026_reset_pulse.sql  0027_session_skill_state.sql  0028_project_boards.sql  0029_board_scoped_default_column.sql  0031_tenant_id.sql
crates/orbit-engine/src/db/repos/: mod.rs  postgres.rs  sqlite.rs
crates/orbit-engine/src/events/: emitter.rs
crates/orbit-engine/src/executor/: agent_loop.rs  anthropic.rs  cli_launcher.rs  codex_cli.rs  compaction.rs  context.rs  engine.rs  global_settings.rs  http.rs  llm_provider.rs  mcp_server.rs  memory.rs  mod.rs  permissions.rs  process.rs  project_scope.rs  session_agent.rs  session_worktree.rs  skills.rs  state_machine.rs  vercel.rs
crates/orbit-engine/src/executor/tools/: config.rs  context.rs  helpers.rs  image_analysis.rs  image_generation.rs  message.rs  notebook.rs  plugin_management.rs  read_file.rs  (+15 more)
crates/orbit-engine/src/models/: bus.rs  chat.rs  mod.rs  project.rs  project_board.rs  project_workflow.rs  trigger_event.rs  workflow_run.rs
crates/orbit-engine/src/plugins/: core_api.rs  entities.rs  mcp_client.rs  mod.rs  registry.rs  runtime.rs  tools.rs
crates/orbit-engine/src/scheduler/: converter.rs  engine.rs
crates/orbit-engine/src/shim/: auth.rs  registry.rs  router.rs  static_files.rs
crates/orbit-engine/src/triggers/: bindings.rs  channel_session.rs  dispatcher.rs  mod.rs  reply_registry.rs  spawn.rs  subscriptions.rs
crates/orbit-engine/src/workflows/: mod.rs  orchestrator.rs  rule_eval.rs  seen_items.rs  store.rs
crates/orbit-engine/tests/: pg_repos_rls.rs
crates/orbit-server/: Cargo.toml
crates/orbit-server/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.mcp.conf.json
src-tauri/capabilities/: mcp-bridge.json
src-tauri/resources/memory-service/: mcp_server.py  memory_config.py  pyproject.toml  requirements.txt  server.py
src-tauri/src/: app_context.rs  auth.rs  error.rs  lib.rs  memory_service.rs
src-tauri/src/commands/: agents.rs  auth.rs  bus.rs  chat.rs  global_settings.rs  llm.rs  memory.rs  mod.rs  permissions.rs  plugins.rs  project_board_columns.rs  project_boards.rs  project_workflows.rs  projects.rs  pulse.rs  runs.rs  schedules.rs  sessions.rs  skills.rs  tasks.rs  terminals.rs  triggers.rs  users.rs  work_item_events.rs  work_items.rs  workflow_runs.rs  workspace.rs
src-tauri/src/db/: cloud.rs  connection.rs  mod.rs  realtime.rs  workspace_sync.rs
src-tauri/src/db/migrations/: 0001_initial.sql  0002_agent_loop.sql  0004_agent_slugs.sql  0005_context_management.sql  0006_agent_bus.sql  0008_session_workflows.sql  0011_memory_extraction_log.sql  0012_projects.sql  0013_workspace_objects.sql  0014_message_reactions.sql  0015_session_allow_subagents.sql  0016_session_worktrees.sql  0018_work_items.sql  0019_work_item_comments.sql  0023_customizable_project_board.sql  0024_plugin_entities.sql  0030_work_item_events.sql
src-tauri/src/events/: emitter.rs
src-tauri/src/executor/: agent_loop.rs  agent_tools.rs  anthropic.rs  bg_processes.rs  channels.rs  claude_cli.rs  cli_common.rs  codex_cli.rs  compaction.rs  context.rs  engine.rs  global_settings.rs  http.rs  image_gen.rs  keychain.rs  llm_provider.rs  mcp_server.rs  memory.rs  migration.rs  minimax.rs  mod.rs  permissions.rs  process.rs  pty_session.rs  session_agent.rs  session_worktree.rs  skills.rs  state_machine.rs  workspace.rs
src-tauri/src/executor/tools/: activate_skill.rs  ask_user.rs  config.rs  context.rs  edit_file.rs  finish.rs  forget.rs  grep.rs  helpers.rs  list_files.rs  list_memories.rs  message.rs  mod.rs  plugin_management.rs  react_to_message.rs  read_file.rs  schedule.rs  search_memory.rs  send_message.rs  session_control.rs  session_helpers.rs  session_history.rs  session_send.rs  session_status.rs  sessions_spawn.rs  shell_command.rs  spawn_sub_agents.rs  subagents.rs  task.rs  web_fetch.rs  web_search.rs  work_item.rs  worktree.rs  write_file.rs  yield_turn.rs
src-tauri/src/models/: agent.rs  agent_task.rs  bus.rs  channel_binding.rs  chat.rs  mod.rs  project.rs  project_board_column.rs  project_workflow.rs  run.rs  schedule.rs  session.rs  task.rs  user.rs  work_item.rs  work_item_comment.rs  work_item_event.rs  workflow_run.rs
src-tauri/src/plugins/: core_api.rs  entities.rs  hooks.rs  install.rs  manifest.rs  mcp_client.rs  mod.rs  oauth.rs  registry.rs  runtime.rs  tools.rs
src-tauri/src/scheduler/: converter.rs  engine.rs  mod.rs
src-tauri/src/shim/: auth.rs  mod.rs  registry.rs  router.rs  static_files.rs  ws.rs
src-tauri/src/triggers/: bindings.rs  channel_session.rs  dispatcher.rs  mod.rs  spawn.rs  subscriptions.rs
src-tauri/src/workflows/: mod.rs  orchestrator.rs  rule_eval.rs  seen_items.rs  store.rs  template.rs
src-tauri/src/workflows/nodes/: agent.rs  board.rs  code.rs  feed.rs  http.rs  logic.rs  mod.rs  plugin.rs
src-tauri/tests/: plugins_integration.rs
src-tauri/tests/plugins/: stub_mcp_server.js
(+286 files in other folders)
