[package]
name = "orbit"
version = "0.1.0"
description = "Orbit – macOS automation platform"
authors = ["orbitforge-ai"]
edition = "2021"

[lib]
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Scheduling
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }

# IDs and time
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.18"

# Logging
log = "0.4.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
