[package]
name = "orbit"
version = "0.1.0"
description = "Orbit – macOS automation platform"
authors = ["orbitforge-ai"]
edition = "2021"

[lib]
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["debug-mcp-bridge"]
# Wraps the external `tauri-plugin-mcp-bridge` used by debugging agents.
# Gated so release builds can opt out while keeping the dev debugging path intact.
debug-mcp-bridge = ["dep:tauri-plugin-mcp-bridge"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-mcp-bridge = { version = "0.9.0", optional = true }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Database
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cloud sync — uuid for device identity
uuid = { version = "1", features = ["v4"] }
# Note: sqlx (PostgreSQL) will be added when cloud DB queries are implemented,
# at which point rusqlite/r2d2_sqlite will be removed to avoid the sqlite3 link conflict.

# Scheduling
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }

# IDs and time
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.18"

# HTTP task execution
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"

# HTTP server for embedded MCP bridge + browser-access shim
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "ws", "query"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["cors"] }
urlencoding = "2"

# Embeds the production frontend bundle for release shim deployments.
# Empty/absent dist/ at compile time is fine — embed just contributes zero
# files and the static route falls through.
rust-embed = { version = "8", features = ["mime-guess"] }
which = "6"

# Cron scheduling
cron = "0.12"

# Async helpers
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
glob = "0.3"
html2md = "0.2"
regex = "1"
feed-rs = "1.5"
sha2 = "0.10"
walkdir = "2"

# Logging
tauri-plugin-log = "2"
tracing = "0.1"
tauri-plugin-dialog = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
