[package]
name = "orbit-engine"
version = "0.1.0"
edition = "2021"
description = "Orbit core engine: executor, scheduler, plugins, db, transport shim — independent of Tauri builder"
publish = false

[features]
default = []
# Enables desktop-only providers and integrations (claude-cli, codex-cli).
# Off by default so the standalone server crate can pull in `orbit-engine`
# without those code paths.
desktop = []

[dependencies]
# Tauri core types — engine still uses `tauri::AppHandle` (Option-wrapped in
# AppContext) and `tauri::Emitter` from events/emitter.rs. This will be
# refactored behind a trait in a later phase.
tauri = { version = "2" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Database
#
# Phase B introduces sqlx alongside the existing r2d2/rusqlite layer. Both
# pools coexist during the migration: r2d2 keeps the existing query layer
# alive while we move aggregate-by-aggregate onto sqlx + repo traits. Once
# every command uses sqlx, the rusqlite/r2d2 deps can be removed.
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
#
# Note: sqlx's `sqlite` driver links the same `sqlite3` native library as
# rusqlite's `bundled` feature, and Cargo allows only one `links = "sqlite3"`
# package in the graph. Until rusqlite is removed we run sqlx with
# Postgres only; SQLite repository impls keep using rusqlite. Once every
# aggregate is on the repo trait and rusqlite is dropped, switch sqlx on
# for both backends.
# Note: sqlx's `chrono` / `uuid` / `json` umbrella-level features each
# transitively pull `sqlx-sqlite` in 0.8.x even when the `sqlite` driver is
# disabled, which conflicts with rusqlite's bundled `libsqlite3-sys`. Until
# rusqlite is removed, we skip those features and convert types manually
# (timestamps as RFC3339 strings, JSON as `serde_json::Value` via TEXT, etc.).
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cloud sync — uuid for device identity
uuid = { version = "1", features = ["v4"] }

# Scheduling
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }

# IDs and time
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.18"

# HTTP task execution
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"

# HTTP server for embedded MCP bridge + browser-access shim
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "ws", "query"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["cors"] }
urlencoding = "2"

# Embeds the production frontend bundle for release shim deployments.
rust-embed = { version = "8", features = ["mime-guess"] }
which = "6"

# Cross-platform pseudoterminal for the embedded terminal (TUI).
portable-pty = "0.8"

# Cron scheduling
cron = "0.12"

# Async helpers
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
glob = "0.3"
html2md = "0.2"
regex = "1"
feed-rs = "1.5"
sha2 = "0.10"
walkdir = "2"

# Logging
tracing = "0.1"
