[package]
name = "orbit-server"
version = "0.1.0"
edition = "2021"
description = "Standalone Orbit engine binary — headless cloud / self-host server"
publish = false

[[bin]]
name = "orbit-server"
path = "src/main.rs"

[dependencies]
# The engine, without the desktop feature: no claude-cli / codex-cli, no
# embedded terminal commands.
orbit-engine = { path = "../orbit-engine" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
futures = "0.3"
